# CoexistAI

./: .dockerignore  .gitignore  LICENSE  README.md  README_MCP.md  app.py  coexist_tutorial.ipynb  demo_queries.ipynb  model_config.py  pyproject.toml  quick_setup.sh  requirements.txt  system_prompt.py
.github/: QUICK_START.md
.github/workflows/: README.md  docker-build-multiarch.yml  docker-test-local.yml  release.yml
config/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  model_config.py  requirements.txt
config/searxng/: settings.yml
docs/: DOCKER_12FACTOR.md  ENV.md  GITHUB_ACTIONS.md  README.md
output/: map_with_route_and_pois.html
scripts/: health_check.py  quick_setup.sh
searxng/: settings.yml  uwsgi.ini
tests/: test_dynamic_config.py  test_huggingface_fix.py  verify_config.py  verify_coverage.py
utils/: answer_generation.py  config.py  git_utils.py  map.py  prcoess_content.py  process_content.py  profiler_utils.py  reddit_utils.py  retriever_utils.py  startup_banner.py  tts_utils.py  utils.py  websearch_utils.py
